--- a/src/CSS_Files/Navbar.css
+++ b/src/CSS_Files/Navbar.css
@@ -1,6 +1,6 @@
 /* Navbar.css */
 body[data-bs-theme='light'] {
-    background-color: #fff;
+    background-color: #f8f9fa;
     color: #000;
 }
 
@@ -15,6 +15,7 @@ body[data-bs-theme='dark'] {
     align-items: center;
     padding: 1rem;
     background-color: inherit;
+    padding: 10px;
 }
 
 .navbar-brand img {
