--- a/src/CSS_Files/AboutPyImg.css
+++ b/src/CSS_Files/AboutPyImg.css
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: row;
     align-items: stretch;
-    /* Changed to stretch to align items */
     justify-content: space-between;
     max-width: 1200px;
     margin: auto;
@@ -11,41 +10,47 @@
 
 .about-py-img-big {
     flex: 1;
-    /* Takes half of the container width */
     width: 50%;
-    /* Set width to 50% */
     position: relative;
     overflow: hidden;
 }
 
-.about-py-img-big img {
+.about-py-img-big img,
+.about-py-img-small img.flipping {
     width: 100%;
     height: 100%;
-    /* Set height to 100% */
-    animation: flip 1s infinite alternate;
 }
 
 .about-py-img-small-container {
     flex: 1;
-    /* Takes half of the container width */
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 50%;
-    /* Set width to 50% */
 }
 
 .about-py-img-small {
     width: 100%;
-    /* Make sure each small is full width of its container */
     height: 50%;
-    /* Each small image will take half the height */
 }
 
 .about-py-img-small img {
     width: 100%;
     height: 100%;
-    /* Set height to 100% */
+}
+
+@keyframes flip-updown {
+    0% {
+        transform: rotateX(0deg);
+    }
+
+    100% {
+        transform: rotateX(180deg);
+    }
+}
+
+.about-py-img-big img.flipping-updown {
+    animation: flip-updown 1s infinite alternate;
 }
 
 @keyframes flip {
@@ -56,6 +61,10 @@
     100% {
         transform: rotateY(180deg);
     }
+}
+
+.about-py-img-small img.flipping {
+    animation: flip 1s infinite alternate;
 }
 
 @media (max-width: 768px) {
